--- a/src/styles/gameboard.css
+++ b/src/styles/gameboard.css
@@ -7,7 +7,8 @@ div {
 }
 
 h2 {
-  background-color: white;
+  background-color: black;
+  color: white;
   padding: 1.5rem;
   margin: 0px;
 }
@@ -21,7 +22,7 @@ table {
 
 tbody {
     box-shadow: 0 0 0 1px black;
-    background-color: white;
+    background-color: black;
 }
 
 td {
@@ -29,15 +30,15 @@ td {
     text-align: center;
     width: 18px;
     height: 18px;
-    background-color: white;
+    background-color: black;
 }
 
 tr {
-  background-color: white;
+  background-color: black;
 }
 
 .game-board {
-  background-color: white;
+  background-color: black;
 }
 
 .computer {
